microservice options host change

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - .:/usr/src/app
       - /usr/src/app/node_modules
     ports:
-      - ${SERVER_PORT}:${SERVER_PORT}
+      - ${SERVER_PORT}
       - 9229:9229
     command: npm run start:debug
     env_file:
@@ -30,7 +30,7 @@ services:
       POSTGRES_DB: ${DB_DATABASE_NAME}
       PG_DATA: /var/lib/postgresql/data
     ports:
-      - 5432:5432
+      - 5433:5433
     volumes:
       - pgdata:/var/lib/postgresql/data
   pgadmin_container_ms_data_sharing:
